[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/Enemies/mob_lv2.png" type="Texture" id=1]
[ext_resource path="res://Script/Enemies/Enemy_2.gd" type="Script" id=2]
[ext_resource path="res://Scene/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scene/Enemies/OffScreenMaker.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scene/Stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scene/Enemies/HP_Bar_2.tscn" type="PackedScene" id=8]
[ext_resource path="res://white_color.shader" type="Shader" id=9]
[ext_resource path="res://assets/Shadows/big-shadow.png" type="Texture" id=10]
[ext_resource path="res://assets/Shadows/light.png" type="Texture" id=11]
[ext_resource path="res://Scene/Enemies/SoftCollision.tscn" type="PackedScene" id=12]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/active = false

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.1747, 20.366 )

[sub_resource type="Animation" id=3]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_hurt_finish"
} ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 558.542

[sub_resource type="CircleShape2D" id=7]
radius = 46.7164

[sub_resource type="CircleShape2D" id=8]
radius = 46.6021

[sub_resource type="CircleShape2D" id=9]
radius = 40.577

[sub_resource type="CircleShape2D" id=10]
radius = 28.2019

[node name="Enemy_2" type="KinematicBody2D"]
position = Vector2( 0, -60 )
collision_layer = 16
collision_mask = 16
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="shadow" type="Sprite" parent="."]
position = Vector2( 0, 60 )
scale = Vector2( 1.4, 1.2 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="AnimationEnemy_2" type="AnimationPlayer" parent="."]
autoplay = "Idle"
playback_speed = 0.6
anims/Hurt = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Stop = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="HitBox" parent="." instance=ExtResource( 3 )]
visible = false
collision_mask = 4
damage = 3

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 7 )

[node name="OffScreenMaker" parent="." instance=ExtResource( 6 )]
scale = Vector2( 0.3, 0.3 )

[node name="Icon" parent="OffScreenMaker/Sprite" index="0"]
modulate = Color( 0.32549, 1, 1, 1 )

[node name="Light2D" parent="OffScreenMaker/Sprite/Icon" index="0"]
color = Color( 0.0588235, 1, 0.843137, 1 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 7 )]
max_health = 18

[node name="HP_Bar_2" parent="." instance=ExtResource( 8 )]
margin_left = -32.0
margin_top = 38.0
margin_right = 32.0
margin_bottom = 54.0

[node name="HurtBox2" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 512

[node name="CollisionShape2D" parent="HurtBox2" index="0"]
shape = SubResource( 9 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 11 )
texture_scale = 0.6
color = Color( 0.0588235, 1, 0.843137, 1 )
energy = 0.8
shadow_enabled = true
shadow_gradient_length = 3.0
shadow_filter = 2
shadow_filter_smooth = 50.0

[node name="Light2D2" type="Light2D" parent="."]
texture = ExtResource( 11 )
texture_scale = 1.5
color = Color( 0.0588235, 1, 0.843137, 1 )
energy = 0.2
shadow_gradient_length = 3.0
shadow_filter = 2
shadow_filter_smooth = 50.0

[node name="SoftCollision" parent="." instance=ExtResource( 12 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( -0.00401592, 60.0052 )
shape = SubResource( 10 )

[node name="Hide_1" type="Position2D" parent="."]
position = Vector2( -39.3778, 10.345 )

[node name="Hide_2" type="Position2D" parent="."]
position = Vector2( 37.0418, 10.0113 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincible_ended" from="HurtBox" to="." method="_on_HurtBox_invincible_ended"]
[connection signal="invincible_started" from="HurtBox" to="." method="_on_HurtBox_invincible_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="HurtBox2" to="." method="_on_HurtBox2_area_entered"]
[connection signal="invincible_ended" from="HurtBox2" to="." method="_on_HurtBox2_invincible_ended"]
[connection signal="invincible_started" from="HurtBox2" to="." method="_on_HurtBox2_invincible_started"]

[editable path="HitBox"]
[editable path="OffScreenMaker"]
[editable path="HurtBox"]
[editable path="HP_Bar_2"]
[editable path="HurtBox2"]
[editable path="SoftCollision"]
